--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -3,61 +3,64 @@
 #
 # SPDX-License-Identifier: MIT
 
-if(ENABLE_SERIAL)
-    target_link_libraries(variorum ${variorum_deps})
-endif()
-if(MPI_FOUND)
-    target_link_libraries(variorum_mpi ${variorum_deps})
-endif()
-
 add_definitions(-DSECOND_RUN)
 
+if(MPI_FOUND)
+    add_definitions(-DPARALLEL)
+endif()
+
 set(BASIC_EXAMPLES
-    variorum-cap-and-verify-node-power-limit-example
-    variorum-cap-best-effort-node-power-limit-example
-    variorum-cap-each-core-frequency-limit-example
-    variorum-cap-gpu-power-ratio-example
-    variorum-cap-socket-clock-speed-example
-    variorum-cap-socket-power-limits-example
-    variorum-disable-turbo-example
-    variorum-enable-turbo-example
-    variorum-get-node-power-json-example
-    variorum-monitoring-to-file-example
-    variorum-poll-power-to-file-example
-    variorum-poll-power-to-stdout-example
-    variorum-print-available-frequencies-example
-    variorum-print-clock-speed-example
-    variorum-print-counters-example
-    variorum-print-features-example
-    variorum-print-gpu-utilization-example
-    variorum-print-hyperthreading-example
-    variorum-print-power-example
+#    variorum-cap-and-verify-node-power-limit-example
+#    variorum-cap-best-effort-node-power-limit-example
+#    variorum-cap-each-core-frequency-limit-example
+#    variorum-cap-gpu-power-ratio-example
+#    variorum-cap-socket-clock-speed-example
+#    variorum-cap-socket-power-limits-example
+#    variorum-disable-turbo-example
+#    variorum-enable-turbo-example
+#    variorum-get-node-power-json-example
+#    variorum-monitoring-to-file-example
+#    variorum-poll-power-to-file-example
+#    variorum-poll-power-to-stdout-example
+#    variorum-print-available-frequencies-example
+#    variorum-print-clock-speed-example
+#    variorum-print-counters-example
+#    variorum-print-features-example
+#    variorum-print-gpu-utilization-example
+#    variorum-print-hyperthreading-example
+#    variorum-print-power-example
     variorum-print-power-limits-example
-    variorum-print-thermals-example
-    variorum-print-topology-example
-    variorum-print-turbo-example
-    variorum-print-verbose-clock-speed-example
-    variorum-print-verbose-counters-example
-    variorum-print-verbose-gpu-utilization-example
-    variorum-print-verbose-power-limits-example
-    variorum-print-verbose-power-example
-    variorum-print-verbose-thermals-example
+#    variorum-print-thermals-example
+#    variorum-print-topology-example
+#    variorum-print-turbo-example
+#    variorum-print-verbose-clock-speed-example
+#    variorum-print-verbose-counters-example
+#    variorum-print-verbose-gpu-utilization-example
+#    variorum-print-verbose-power-limits-example
+#    variorum-print-verbose-power-example
+#    variorum-print-verbose-thermals-example
 )
 
 message(STATUS "Adding variorum examples")
 foreach(EXAMPLE ${BASIC_EXAMPLES})
     message(STATUS " [*] Adding example: ${EXAMPLE}")
+
     if(ENABLE_SERIAL)
         add_executable(${EXAMPLE}_ser ${EXAMPLE}.c)
         target_link_libraries(${EXAMPLE}_ser variorum ${variorum_deps})
     endif()
+
     if(MPI_FOUND)
         add_executable(${EXAMPLE}_par ${EXAMPLE}.c)
         target_link_libraries(${EXAMPLE}_par variorum_mpi ${variorum_deps})
     endif()
 endforeach()
 
-include_directories(${CMAKE_SOURCE_DIR}/variorum)
+if(MPI_FOUND)
+    include_directories(${CMAKE_SOURCE_DIR}/variorum ${MPI_INCLUDE_PATH})
+else()
+    include_directories(${CMAKE_SOURCE_DIR}/variorum)
+endif()
 
 install(DIRECTORY using-with-make using-with-cmake
         DESTINATION examples)
