--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -181,7 +181,7 @@ jobs:
           BUILD_TESTS: OFF
           CMAKE_BUILD_TYPE: Release
           ENABLE_FORTRAN: ON
-          ENABLE_MPI: ON
+          ENABLE_MPI: OFF
           VARIORUM_DEBUG: OFF
           VARIORUM_LOG: OFF
           USE_MSR_SAFE_BEFORE_1_5_0: OFF
