--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,6 +22,7 @@ jobs:
             CMAKE_BUILD_TYPE: RelWithDebInfo
             ENABLE_FORTRAN: ON
             ENABLE_MPI: ON
+            ENABLE_OPENMP: ON
             VARIORUM_DEBUG: ON
             VARIORUM_LOG: ON
 
@@ -32,6 +33,7 @@ jobs:
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
             ENABLE_MPI: OFF
+            ENABLE_OPENMP: OFF
             VARIORUM_DEBUG: ON
             VARIORUM_LOG: ON
 
@@ -42,6 +44,7 @@ jobs:
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
             ENABLE_MPI: OFF
+            ENABLE_OPENMP: OFF
             VARIORUM_DEBUG: OFF
             VARIORUM_LOG: OFF
 
@@ -52,6 +55,7 @@ jobs:
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
             ENABLE_MPI: OFF
+            ENABLE_OPENMP: OFF
             VARIORUM_DEBUG: ON
             VARIORUM_LOG: ON
 
@@ -62,6 +66,7 @@ jobs:
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
             ENABLE_MPI: OFF
+            ENABLE_OPENMP: OFF
             VARIORUM_DEBUG: OFF
             VARIORUM_LOG: OFF
 
@@ -72,6 +77,7 @@ jobs:
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
             ENABLE_MPI: OFF
+            ENABLE_OPENMP: OFF
             VARIORUM_DEBUG: OFF
             VARIORUM_LOG: ON
 
@@ -82,6 +88,7 @@ jobs:
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
             ENABLE_MPI: OFF
+            ENABLE_OPENMP: OFF
             VARIORUM_DEBUG: ON
             VARIORUM_LOG: OFF
 
@@ -92,6 +99,7 @@ jobs:
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
             ENABLE_MPI: OFF
+            ENABLE_OPENMP: OFF
             VARIORUM_DEBUG: ON
             VARIORUM_LOG: ON
 
@@ -102,6 +110,7 @@ jobs:
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
             ENABLE_MPI: OFF
+            ENABLE_OPENMP: OFF
             VARIORUM_DEBUG: OFF
             VARIORUM_LOG: OFF
 
@@ -112,6 +121,7 @@ jobs:
             CMAKE_BUILD_TYPE: Release
             ENABLE_FORTRAN: OFF
             ENABLE_MPI: OFF
+            ENABLE_OPENMP: OFF
             VARIORUM_DEBUG: OFF
             VARIORUM_LOG: ON
 
@@ -149,6 +159,7 @@ jobs:
           export CMAKE_OPTS="${CMAKE_OPTS} -DCMAKE_BUILD_TYPE=${{matrix.CMAKE_BUILD_TYPE}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_FORTRAN=${{matrix.ENABLE_FORTRAN}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_MPI=${{matrix.ENABLE_MPI}}"
+          export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_OPENMP=${{matrix.ENABLE_OPENMP}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DVARIORUM_DEBUG=${{matrix.VARIORUM_DEBUG}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DVARIORUM_LOG=${{matrix.VARIORUM_LOG}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DCMAKE_INSTALL_PREFIX=../install"
@@ -182,6 +193,7 @@ jobs:
           CMAKE_BUILD_TYPE: Release
           ENABLE_FORTRAN: ON
           ENABLE_MPI: OFF
+          ENABLE_OPENMP: OFF
           VARIORUM_DEBUG: OFF
           VARIORUM_LOG: OFF
           USE_MSR_SAFE_BEFORE_1_5_0: OFF
@@ -196,6 +208,7 @@ jobs:
           export CMAKE_OPTS="${CMAKE_OPTS} -DCMAKE_BUILD_TYPE=${{env.CMAKE_BUILD_TYPE}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_FORTRAN=${{env.ENABLE_FORTRAN}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_MPI=${{env.ENABLE_MPI}}"
+          export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_OPENMP=${{env.ENABLE_OPENMP}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DVARIORUM_DEBUG=${{env.VARIORUM_DEBUG}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DVARIORUM_LOG=${{env.VARIORUM_LOG}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DUSE_MSR_SAFE_BEFORE_1_5_0=${{env.USE_MSR_SAFE_BEFORE_1_5_0}}"
@@ -315,6 +328,7 @@ jobs:
       CMAKE_BUILD_TYPE: RelWithDebInfo
       ENABLE_FORTRAN: ON
       ENABLE_MPI: ON
+      ENABLE_OPENMP: ON
       VARIORUM_DEBUG: OFF
       VARIORUM_LOG: ON
 
