--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -391,7 +391,7 @@ jobs:
 
       - name: Install python dependencies
         run: |
-          python -m pip install --upgrade pip flake8
+          python -m pip install --upgrade pip flake8 rstfmt
 
       - name: Update Black
         if: ${{ matrix.python-version == 3.7 }}
@@ -404,6 +404,14 @@ jobs:
           cd ${GITHUB_WORKSPACE}
           flake8
           black --diff --check .
+
+      - name: Style check RST files
+        if: ${{ matrix.python-version == 3.7 }}
+        run: |
+          cd ${GITHUB_WORKSPACE}
+          ./scripts/rst-format.sh
+          err=$?
+          if [ $err -eq 0 ]; then exit 0; else echo -e "Formatting needed for RST files!"; exit 1; fi
 
   build-with-spack-mirrors:
     runs-on: ubuntu-latest
