Initial setup to add variorum_print_energy (archs other than AMD) and variorum_print_verbose_energy (all archs.) APIs.

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -40,6 +40,7 @@ set(BASIC_EXAMPLES
     variorum-print-verbose-power-example
     variorum-print-verbose-thermals-example
     variorum-print-energy-example
+    variorum-print-verbose-energy-example
 )
 
 message(STATUS "Adding variorum examples")
