--- a/src/examples/openmp-examples/CMakeLists.txt
+++ b/src/examples/openmp-examples/CMakeLists.txt
@@ -23,3 +23,9 @@ foreach(EXAMPLE ${OPENMP_EXAMPLES})
 endforeach()
 
 include_directories(${CMAKE_SOURCE_DIR}/variorum)
+
+
+# quick hack
+if(VARIORUM_WITH_INTEL_DGPU)
+	set(CMAKE_EXE_LINKER_FLAGS "-lze_loader -lstdc++ -L${APMIDG_DIR}/lib64/ -lapmidg")
+endif()
