--- a/src/variorum/CMakeLists.txt
+++ b/src/variorum/CMakeLists.txt
@@ -48,6 +48,14 @@ if(VARIORUM_WITH_INTEL_CPU)
     add_subdirectory(Intel)
 endif()
 
+if(VARIORUM_WITH_INTEL_DGPU)
+    list(APPEND variorum_headers Intel_DGPU/config_intel_dgpu.h ${variorum_apmidg_headers} ${APMIDG_INCLUDE_DIRS}/libapmidg.h)
+    list(APPEND variorum_sources Intel_DGPU/config_intel_dgpu.c)
+    list(APPEND variorum_deps $<TARGET_OBJECTS:variorum_intel_dgpu>)
+    list(APPEND variorum_includes ${CMAKE_CURRENT_SOURCE_DIR}/Intel_DGPU ${APMIDG_INCLUDE_DIRS})
+    add_subdirectory(Intel_DGPU)
+endif()
+
 if(VARIORUM_WITH_IBM_CPU)
     list(APPEND variorum_headers IBM/config_ibm.h ${variorum_ibm_headers})
     list(APPEND variorum_sources IBM/config_ibm.c)
@@ -118,7 +126,10 @@ endif()
 target_link_libraries(variorum PUBLIC ${HWLOC_LIBRARY})
 target_link_libraries(variorum PUBLIC ${JANSSON_LIBRARY})
 target_link_libraries(variorum PUBLIC m)
-if(VARIORUM_WITH_NVIDIA_GPU)
+if(VARIORUM_WITH_INTEL_DGPU)
+target_link_libraries(variorum PUBLIC ${APMIDG_HEADER})
+endif()
+if(VARIORUM_WITH_NVIDIA)
 target_link_libraries(variorum PUBLIC ${NVML_HEADER})
 endif()
 if(VARIORUM_WITH_AMD_CPU)
