Renamed INTEL_DGPU to INTEL_GPU. Updated macro, func, file, dir, etc

--- a/src/tests/variorum/CMakeLists.txt
+++ b/src/tests/variorum/CMakeLists.txt
@@ -31,6 +31,6 @@ endforeach()
 include_directories(${CMAKE_SOURCE_DIR}/variorum)
 
 # quick hack
-if(VARIORUM_WITH_INTEL_DGPU)
+if(VARIORUM_WITH_INTEL_GPU)
 	set(CMAKE_EXE_LINKER_FLAGS "-lze_loader -lstdc++ -L${APMIDG_DIR}/lib64/ -lapmidg")
 endif()
