--- a/src/variorum/CMakeLists.txt
+++ b/src/variorum/CMakeLists.txt
@@ -48,12 +48,12 @@ if(VARIORUM_WITH_INTEL_CPU)
     add_subdirectory(Intel)
 endif()
 
-if(VARIORUM_WITH_INTEL_DGPU)
-    list(APPEND variorum_headers Intel_DGPU/config_intel_dgpu.h ${variorum_apmidg_headers} ${APMIDG_INCLUDE_DIRS}/libapmidg.h)
-    list(APPEND variorum_sources Intel_DGPU/config_intel_dgpu.c)
-    list(APPEND variorum_deps $<TARGET_OBJECTS:variorum_intel_dgpu>)
-    list(APPEND variorum_includes ${CMAKE_CURRENT_SOURCE_DIR}/Intel_DGPU ${APMIDG_INCLUDE_DIRS})
-    add_subdirectory(Intel_DGPU)
+if(VARIORUM_WITH_INTEL_GPU)
+    list(APPEND variorum_headers Intel_GPU/config_intel_gpu.h ${variorum_apmidg_headers} ${APMIDG_INCLUDE_DIRS}/libapmidg.h)
+    list(APPEND variorum_sources Intel_GPU/config_intel_gpu.c)
+    list(APPEND variorum_deps $<TARGET_OBJECTS:variorum_intel_gpu>)
+    list(APPEND variorum_includes ${CMAKE_CURRENT_SOURCE_DIR}/Intel_GPU ${APMIDG_INCLUDE_DIRS})
+    add_subdirectory(Intel_GPU)
 endif()
 
 if(VARIORUM_WITH_IBM_CPU)
@@ -126,7 +126,7 @@ endif()
 target_link_libraries(variorum PUBLIC ${HWLOC_LIBRARY})
 target_link_libraries(variorum PUBLIC ${JANSSON_LIBRARY})
 target_link_libraries(variorum PUBLIC m)
-if(VARIORUM_WITH_INTEL_DGPU)
+if(VARIORUM_WITH_INTEL_GPU)
 target_link_libraries(variorum PUBLIC ${APMIDG_HEADER})
 endif()
 if(VARIORUM_WITH_NVIDIA)
