--- a/src/variorum/Intel_GPU/CMakeLists.txt
+++ b/src/variorum/Intel_GPU/CMakeLists.txt
@@ -3,21 +3,21 @@
 #
 # SPDX-License-Identifier: MIT
 
-set(variorum_intel_dgpu_headers
-  ${CMAKE_CURRENT_SOURCE_DIR}/DGPU.h
+set(variorum_intel_gpu_headers
+  ${CMAKE_CURRENT_SOURCE_DIR}/GPU.h
   ${CMAKE_CURRENT_SOURCE_DIR}/power_features.h
   CACHE INTERNAL "")
 
-set(variorum_intel_dgpu_sources
-  ${CMAKE_CURRENT_SOURCE_DIR}/DGPU.c
+set(variorum_intel_gpu_sources
+  ${CMAKE_CURRENT_SOURCE_DIR}/GPU.c
   ${CMAKE_CURRENT_SOURCE_DIR}/power_features.c
   CACHE INTERNAL "")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${variorum_includes})
 
-add_library(variorum_intel_dgpu OBJECT
-            ${variorum_intel_dgpu_sources}
-            ${variorum_intel_dgpu_headers})
+add_library(variorum_intel_gpu OBJECT
+            ${variorum_intel_gpu_sources}
+            ${variorum_intel_gpu_headers})
 
 ### Shared libraries need PIC
-set_property(TARGET ${variorum_intel_dgpu} PROPERTY POSITION_INDEPENDENT_CODE 1)
+set_property(TARGET ${variorum_intel_gpu} PROPERTY POSITION_INDEPENDENT_CODE 1)
