VARIOUM_WITH_NVIDIA should be VARIORUM_WITH_NVIDIA_GPU

--- a/src/variorum/CMakeLists.txt
+++ b/src/variorum/CMakeLists.txt
@@ -129,7 +129,7 @@ target_link_libraries(variorum PUBLIC m)
 if(VARIORUM_WITH_INTEL_GPU)
 target_link_libraries(variorum PUBLIC ${APMIDG_HEADER})
 endif()
-if(VARIORUM_WITH_NVIDIA)
+if(VARIORUM_WITH_NVIDIA_GPU)
 target_link_libraries(variorum PUBLIC ${NVML_HEADER})
 endif()
 if(VARIORUM_WITH_AMD_CPU)
