--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -361,13 +361,9 @@ jobs:
 
       - name: Test install with fortran example
         run: |
-          cd ${GITHUB_WORKSPACE} && cd install
+          cd ${GITHUB_WORKSPACE} && cd build
           echo -e "PWD:" ${PWD}
           cd ./examples/fortran-examples
-          mkdir _test_build
-          cd _test_build
-          cmake ../
-          make VERBOSE=1
           ./variorum-print-power-fortran-example
 
   check-code-format:
