--- a/src/tests/variorum/CMakeLists.txt
+++ b/src/tests/variorum/CMakeLists.txt
@@ -4,7 +4,7 @@
 # SPDX-License-Identifier: MIT
 
 set(BASIC_TESTS
-    t_variorum_cap_best_effort_node_power_limit
+#    t_variorum_cap_best_effort_node_power_limit
     t_variorum_cap_gpu_power_ratio
     t_variorum_cap_socket_frequency_limit
     t_variorum_cap_socket_power_limit
