--- a/src/variorum/CMakeLists.txt
+++ b/src/variorum/CMakeLists.txt
@@ -127,7 +127,7 @@ target_link_libraries(variorum PUBLIC ${HWLOC_LIBRARY})
 target_link_libraries(variorum PUBLIC ${JANSSON_LIBRARY})
 target_link_libraries(variorum PUBLIC m)
 if(VARIORUM_CPRINTF)
-    target_link_libraries(variorum PUBLIC $CPRINTF_LIBRARY)
+    target_link_libraries(variorum PUBLIC ${CPRINTF_LIBRARY})
 endif()
 if(VARIORUM_WITH_INTEL_GPU)
 target_link_libraries(variorum PUBLIC ${APMIDG_HEADER})
