--- a/src/docs/sphinx/environment.yml
+++ b/src/docs/sphinx/environment.yml
@@ -5,6 +5,7 @@ channels:
   - defaults
 
 dependencies:
+  - sphinx>=3.4,!=4.1.2,!=5.1.0
   - breathe==4.16.0
   - jinja2<3.1
   - sphinxcontrib-programoutput
