--- a/src/variorum/ARM/CMakeLists.txt
+++ b/src/variorum/ARM/CMakeLists.txt
@@ -8,6 +8,7 @@ set(variorum_arm_headers
   ${CMAKE_CURRENT_SOURCE_DIR}/ARM_Neoverse_N1.h
   ${CMAKE_CURRENT_SOURCE_DIR}/power_features_Juno_r2.h
   ${CMAKE_CURRENT_SOURCE_DIR}/power_features_Neoverse_N1.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/arm_util.h
   CACHE INTERNAL "")
 
 set(variorum_arm_sources
@@ -15,6 +16,7 @@ set(variorum_arm_sources
   ${CMAKE_CURRENT_SOURCE_DIR}/ARM_Neoverse_N1.c
   ${CMAKE_CURRENT_SOURCE_DIR}/power_features_Juno_r2.c
   ${CMAKE_CURRENT_SOURCE_DIR}/power_features_Neoverse_N1.c
+  ${CMAKE_CURRENT_SOURCE_DIR}/arm_util.c
   CACHE INTERNAL "")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${variorum_includes})
